unpackaged/objects/CXOne_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>Agent ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CXOne Interactions</relationshipLabel>
        <relationshipName>CXOne_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chatter_Likes_Count__c</fullName>
        <label>Chatter Likes Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chatter_Post_ID__c</fullName>
        <label>Chatter Post ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Replies_Count__c</fullName>
        <label>Chatter Replies Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CXOne Interactions</relationshipLabel>
        <relationshipName>CXOne_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <label>DNIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Diverted_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Diverted To ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Attachments_Count__c</fullName>
        <label>Email Attachments Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Thread_ID__c</fullName>
        <label>Email Thread ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Timestamp__c</fullName>
        <label>Email Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_State__c</fullName>
        <label>Final State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_End_Time__c</fullName>
        <label>Interaction End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interaction_ID__c</fullName>
        <label>Interaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Start_Time__c</fullName>
        <label>Interaction Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_disposition__c</fullName>
        <label>Interaction disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_notes__c</fullName>
        <label>Interaction notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_status__c</fullName>
        <label>Interaction status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Payload__c</fullName>
        <label>Raw Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recording_End_Time__c</fullName>
        <label>Recording End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recording_Start_Time__c</fullName>
        <label>Recording Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recording_URL__c</fullName>
        <label>Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Skill_ID__c</fullName>
        <label>Skill ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CXOne Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CXOne Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CXOne Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>